UI: fix achievements overlapping each other in history

--- a/src/css/component/achievements/achievement-history.component.scss
+++ b/src/css/component/achievements/achievement-history.component.scss
@@ -38,6 +38,7 @@
 			align-items: center;
 			justify-content: stretch;
 			padding-left: 10px;
+			flex-shrink: 0;
 
 			&:hover {
 				background: rgba(255, 255, 255, 0.04);
